# jobindex_scraper

./: .env.example  README.md  TODO.md  last_scrape.json  pyproject.toml
.github/workflows/: ci.yml  classify.yml  notify.yml  scrape.yml
db/migrations/: 001_initial.sql  002_matches.sql
src/jobindex_scraper/: __main__.py  classifier.py  classify_cli.py  config.py  database.py  message_cli.py  notifier.py  scrape_cli.py  scraper.py
tests/: test_classifier.py  test_config.py  test_scraper.py
